# voxel-engine

./: .ai-instructions  .gitignore  AGENT_11_BIOME_NOISE_SUMMARY.md  AGENT_16_FEATURE_BLENDING_SUMMARY.md  AGENT_17_BIOME_SCALE_SUMMARY.md  AGENT_18_TRANSITION_TUNING_SUMMARY.md  AGENT_21_BIOME_BLENDING_SUMMARY.md  AGENT_23_BIOME_FALLOFF_SUMMARY.md  AGENT_24_BIOME_CENTER_SUMMARY.md  AGENT_25_INTERPOLATION_UTILITIES_SUMMARY.md  AGENT_27_MOISTURE_BIOME_SUMMARY.md  AGENT_28_HEIGHT_VARIATION_SUMMARY.md  AGENT_30_3D_BIOME_INFLUENCE_SUMMARY.md  AGENT_33_LOD_SYSTEM_SUMMARY.md  AGENT_36_BIOME_GENERATION_TEST_REPORT.md  BATCHING_PARALLELIZATION_ANALYSIS.md  BIOME_SCALE_IMPLEMENTATION.txt  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CRASH_ANALYSIS.md  DEADLOCK_FIX_2025-11-24.md  DETAILED_CRASH_LOCATIONS.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENGINE_HANDBOOK.md  FIXES_COMPLETE_2025-11-24.md  GREEDY_MESHING_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIGHTING_CODE_REFERENCES.txt  LIGHTING_MEMORY_ANALYSIS.md  LIGHTING_MEMORY_INVESTIGATION_INDEX.md  LIGHTING_PERFORMANCE_SUMMARY.txt  LIGHTING_PLAN.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_DEBUG_SESSION.md  PERF_MONITORING_GUIDE.md  Plan.MD  QUICK_FIX_GUIDE.md  QUICK_START_WINDOWS.md  (+29 more)
.claude/: settings.local.json
assets/biomes/: crystal_cave.yaml  deep_dark.yaml  desert.yaml  forest.yaml  ice_tundra.yaml  mountain.yaml  mushroom_cave.yaml  ocean.yaml  plains.yaml  savanna.yaml  swamp.yaml  taiga.yaml  tropical_rainforest.yaml  winter_forest.yaml
assets/blocks/: Block_ID_Index  Block_ID_Index.md  Oak_Pank.yaml  bedrock.yaml  dirt.yaml  explosive_ore.yaml  grass.yaml  grass_spreader.yaml  ice.yaml  leaves.yaml  oak log.yaml  pressure_plate.yaml  sand.yaml  snow.yaml  spruce leaves.yaml  spruce log.yaml  stone.yaml  water.yaml
assets/models/: player.glb
assets/rigs/: example_player.yaml  example_with_tail.yaml  player.yaml
assets/structures/: README.md  example_pillar.yaml  oaktree.yaml
docs/: 3D_BIOME_QUICK_REFERENCE.md  AGENT_10_SUMMARY.md  BIOME_BLENDING_DESIGN.md  BIOME_BLENDING_DIAGRAMS.md  BIOME_BLENDING_INDEX.md  BIOME_BLENDING_QUICK_REFERENCE.md  BIOME_INTERPOLATION.md  BIOME_NOISE_SYSTEM.md  BIOME_QUICK_REFERENCE.md  BIOME_SYSTEM.md  BIOME_TRANSITION_TUNING.md  BUILD_INSTRUCTIONS.md  CUBE_MAP_GUIDE.md  ENGINE_HANDBOOK.md  EVENT_SYSTEM.md  EVENT_SYSTEM_QUICK_REFERENCE.md  LOAD_WORLD_EXAMPLE.cpp  MULTI_LAYER_BIOME_NOISE.md  QUICK_START_WINDOWS.md  README.md  REFACTORING_GUIDE.md  SCRIPTING_REFERENCE.md  TEXTURE_SYSTEM_TODO.md  WINDOWS_SETUP.md  commands.md  console.md  controls.md  event_system_example.cpp  progress.md  script_action_implementation.md  sky_system.md  targeting_system.md  yaml_scripting_guide.md
docs/architecture/: ARCHITECTURE_REVIEW_SUMMARY.md  CONCURRENCY_ANALYSIS.md  MULTITHREADING_ARCHITECTURE.md  STREAMING_DESIGN_README.md  STREAMING_UX_DESIGN.md  THREAD_SAFETY_DEEP_DIVE.md
docs/implementation/: IMPLEMENTATION_GUIDE.md  LOADING_CODE_EXAMPLES.md  QUICK_REFERENCE.md  REFACTORING_STRATEGY.md  STREAMING_IMPLEMENTATION_GUIDE.md
docs/investigations/: BUFFER_UPLOAD_ANALYSIS.md  INVESTIGATION_SUMMARY.txt  LIGHTING_INVESTIGATION_INDEX.md  LIGHTING_MEMORY_SUMMARY.txt  LIGHTING_MEMORY_VISUAL_SUMMARY.txt  LIGHTING_PERFORMANCE_FIXES.md  LIGHTING_QUEUE_ANALYSIS.md  README.md  VOXEL_MATH_PERFORMANCE_ANALYSIS.md  VOXEL_MATH_QUICK_REFERENCE.txt
docs/memory/: CHUNK_LIFECYCLE_ANALYSIS.md  MEMORY_ANALYSIS.md  MEMORY_IMPLEMENTATION_GUIDE.md  MEMORY_MANAGEMENT_SUMMARY.md
docs/summaries/: STREAMING_REFACTORING_SUMMARY.md
docs/systems/: WATER_SYSTEM_ENHANCED.md  WATER_SYSTEM_PROGRESS.md
docs/testing/: README_TESTING.md  TESTING_ARCHITECTURE.txt  TESTING_CHECKLIST.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_INTEGRATION.md  TESTING_QUICK_REFERENCE.md  TESTING_STRATEGY.md
examples/: 3d_biome_usage_example.cpp
include/: biome_falloff.h  biome_interpolation.h  biome_map.h  biome_noise_config.h  biome_system.h  biome_transition_config.h  biome_types.h  biome_voronoi.h  block_icon_renderer.h.old  block_light.h  block_outline.h  block_system.h  chunk.h  chunk_face_config.h  chunk_loading_queue.h  chunk_pool.h  command_registry.h  config.h  console.h  console_commands.h  convar.h  crosshair.h  debug_state.h  engine_api.h  event_dispatcher.h  event_types.h  frustum.h  input_manager.h  inventory.h  key_bindings.h  lighting_system.h  loading_sphere.h  logger.h  main_menu.h  map_preview.h  mesh_buffer_pool.h  particle_system.h  pause_menu.h  perf_monitor.h  player.h  (+15 more)
include/animation/: skeleton_animator.h
include/editor/: editor_background.h  editor_camera.h  file_browser.h  paint_editor.h  particle_editor.h  particle_effect_file.h  preview_animator.h  rig_file.h  skeletal_editor.h  skeleton_editor_state.h
include/mesh/: mesh.h  mesh_loader.h  mesh_renderer.h
include/particle/: particle_effect.h  particle_emitter.h  (+1 more)
shaders/: README.md  compile.bat  compile.sh  line.vert  mesh.frag  mesh.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  sphere.frag  sphere.vert
src/: biome_map.cpp  biome_map.cpp.backup  biome_map.cpp.bak  biome_system.cpp  biome_voronoi.cpp  block_icon_renderer.cpp.old  block_outline.cpp  block_system.cpp  chunk.cpp  chunk_pool.cpp  command_registry.cpp  config.cpp  console.cpp  console_commands.cpp  convar.cpp  crosshair.cpp  debug_state.cpp  engine_api.cpp  event_dispatcher.cpp  event_types.cpp  input_manager.cpp  inventory.cpp  key_bindings.cpp  lighting_system.cpp  loading_sphere.cpp  logger.cpp  main.cpp  main_menu.cpp  main_menu_load_dialog.cpp  map_preview.cpp  mesh_buffer_pool.cpp  oldmain.cpp  particle_system.cpp  pause_menu.cpp  perf_monitor.cpp  player.cpp  raycast.cpp  script_action.cpp  structure_system.cpp  sun_tracker.cpp  (+6 more)
tests/: CMakeLists.txt  chunk_correctness_test.cpp  memory_leak_test.cpp  performance_test.cpp  stress_test.cpp  test_biome_blending.cpp  test_biome_falloff.cpp  test_biome_interpolation.cpp  test_biome_noise.cpp  test_mesh_pooling.cpp  test_moisture_biome_selection.cpp  test_multi_layer_noise.cpp  test_utils.cpp  test_utils.h
(+49 files in other folders)
